Fix Z-index for sidenav

--- a/app/assets/stylesheets/layout/_side_nav.scss
+++ b/app/assets/stylesheets/layout/_side_nav.scss
@@ -3,7 +3,7 @@
   height: 100vh;
   width: 66%;
   position: fixed;
-  z-index: 1;
+  z-index: 20;
   top: 0;
   left: 0;
   display: none;
